--- a/src/css/output.css
+++ b/src/css/output.css
@@ -639,11 +639,23 @@
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
-  .top-72 {
-    top: calc(var(--spacing) * 72);
+  .top-\[30vh\] {
+    top: 30vh;
   }
-  .top-96 {
-    top: calc(var(--spacing) * 96);
+  .top-\[35vh\] {
+    top: 35vh;
+  }
+  .top-\[37vh\] {
+    top: 37vh;
+  }
+  .top-\[40vh\] {
+    top: 40vh;
+  }
+  .top-\[50vh\] {
+    top: 50vh;
+  }
+  .top-\[60vh\] {
+    top: 60vh;
   }
   .top-\[100px\] {
     top: 100px;
@@ -2235,12 +2247,6 @@
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
   }
-  .pt-24 {
-    padding-top: calc(var(--spacing) * 24);
-  }
-  .pt-28 {
-    padding-top: calc(var(--spacing) * 28);
-  }
   .pt-32 {
     padding-top: calc(var(--spacing) * 32);
   }
@@ -2572,8 +2578,17 @@
   .text-white {
     color: var(--color-white);
   }
+  .text-yellow-900 {
+    color: var(--color-yellow-900);
+  }
+  .text-yellow-900\/80 {
+    color: color-mix(in oklab, var(--color-yellow-900) 80%, transparent);
+  }
   .text-yellow-950 {
     color: var(--color-yellow-950);
+  }
+  .text-yellow-950\/70 {
+    color: color-mix(in oklab, var(--color-yellow-950) 70%, transparent);
   }
   .text-yellow-950\/80 {
     color: color-mix(in oklab, var(--color-yellow-950) 80%, transparent);
@@ -3240,29 +3255,34 @@
       padding-top: calc(var(--spacing) * 40);
     }
   }
-  .max-xl\:pt-60 {
-    @media (width < 80rem) {
-      padding-top: calc(var(--spacing) * 60);
-    }
-  }
   .max-xl\:pt-72 {
     @media (width < 80rem) {
       padding-top: calc(var(--spacing) * 72);
     }
   }
-  .max-xl\:text-\[11px\] {
-    @media (width < 80rem) {
-      font-size: 11px;
-    }
-  }
-  .max-xl\:text-\[12px\] {
-    @media (width < 80rem) {
-      font-size: 12px;
-    }
-  }
   .max-xl\:text-\[14px\] {
     @media (width < 80rem) {
       font-size: 14px;
+    }
+  }
+  .max-lg\:top-1 {
+    @media (width < 64rem) {
+      top: calc(var(--spacing) * 1);
+    }
+  }
+  .max-lg\:top-2 {
+    @media (width < 64rem) {
+      top: calc(var(--spacing) * 2);
+    }
+  }
+  .max-lg\:top-36 {
+    @media (width < 64rem) {
+      top: calc(var(--spacing) * 36);
+    }
+  }
+  .max-lg\:top-\[222px\] {
+    @media (width < 64rem) {
+      top: 222px;
     }
   }
   .max-lg\:flex {
@@ -3280,11 +3300,6 @@
       width: 48rem;
     }
   }
-  .max-lg\:w-\[50rem\] {
-    @media (width < 64rem) {
-      width: 50rem;
-    }
-  }
   .max-lg\:w-full {
     @media (width < 64rem) {
       width: 100%;
@@ -3293,11 +3308,6 @@
   .max-lg\:grid-cols-1 {
     @media (width < 64rem) {
       grid-template-columns: repeat(1, minmax(0, 1fr));
-    }
-  }
-  .max-lg\:px-10 {
-    @media (width < 64rem) {
-      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .max-lg\:pt-20 {
@@ -3326,54 +3336,34 @@
       line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
-  .max-lg\:text-\[9px\] {
+  .max-lg\:text-\[13\.8px\] {
     @media (width < 64rem) {
-      font-size: 9px;
+      font-size: 13.8px;
     }
   }
-  .max-lg\:text-\[10px\] {
+  .max-lg\:text-\[13px\] {
     @media (width < 64rem) {
-      font-size: 10px;
+      font-size: 13px;
     }
   }
-  .max-md\:h-\[35rem\] {
-    @media (width < 48rem) {
-      height: 35rem;
+  .max-lg\:text-\[14\.7px\] {
+    @media (width < 64rem) {
+      font-size: 14.7px;
     }
   }
-  .max-md\:h-\[36rem\] {
-    @media (width < 48rem) {
-      height: 36rem;
+  .max-lg\:text-\[14px\] {
+    @media (width < 64rem) {
+      font-size: 14px;
     }
   }
-  .max-md\:h-screen {
-    @media (width < 48rem) {
-      height: 100vh;
-    }
-  }
-  .max-md\:w-\[35rem\] {
-    @media (width < 48rem) {
-      width: 35rem;
-    }
-  }
-  .max-md\:w-\[38rem\] {
-    @media (width < 48rem) {
-      width: 38rem;
+  .max-lg\:text-\[15px\] {
+    @media (width < 64rem) {
+      font-size: 15px;
     }
   }
   .max-md\:w-\[45rem\] {
     @media (width < 48rem) {
       width: 45rem;
-    }
-  }
-  .max-md\:w-\[46rem\] {
-    @media (width < 48rem) {
-      width: 46rem;
-    }
-  }
-  .max-md\:w-\[50rem\] {
-    @media (width < 48rem) {
-      width: 50rem;
     }
   }
   .max-md\:px-10 {
@@ -3571,6 +3561,16 @@
       height: 35rem;
     }
   }
+  .max-sm\:h-\[37rem\] {
+    @media (width < 40rem) {
+      height: 37rem;
+    }
+  }
+  .max-sm\:h-\[38rem\] {
+    @media (width < 40rem) {
+      height: 38rem;
+    }
+  }
   .max-sm\:h-\[580px\] {
     @media (width < 40rem) {
       height: 580px;
@@ -3643,6 +3643,11 @@
       padding-inline: calc(var(--spacing) * 2);
     }
   }
+  .max-sm\:px-4 {
+    @media (width < 40rem) {
+      padding-inline: calc(var(--spacing) * 4);
+    }
+  }
   .max-sm\:px-8 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 8);
@@ -3653,49 +3658,9 @@
       padding-top: calc(var(--spacing) * 20);
     }
   }
-  .max-sm\:pt-32 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 32);
-    }
-  }
-  .max-sm\:pt-36 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 36);
-    }
-  }
-  .max-sm\:pt-40 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 40);
-    }
-  }
-  .max-sm\:pt-52 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 52);
-    }
-  }
-  .max-sm\:pt-60 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 60);
-    }
-  }
-  .max-sm\:pt-64 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 64);
-    }
-  }
   .max-sm\:pr-0 {
     @media (width < 40rem) {
       padding-right: calc(var(--spacing) * 0);
-    }
-  }
-  .max-sm\:pb-4 {
-    @media (width < 40rem) {
-      padding-bottom: calc(var(--spacing) * 4);
-    }
-  }
-  .max-sm\:pb-32 {
-    @media (width < 40rem) {
-      padding-bottom: calc(var(--spacing) * 32);
     }
   }
   .max-sm\:pl-0 {
@@ -3784,6 +3749,11 @@
       font-size: 9.5px;
     }
   }
+  .max-sm\:text-\[9\.8px\] {
+    @media (width < 40rem) {
+      font-size: 9.8px;
+    }
+  }
   .max-sm\:text-\[9px\] {
     @media (width < 40rem) {
       font-size: 9px;
@@ -3824,11 +3794,6 @@
       top: calc(var(--spacing) * 36);
     }
   }
-  .md\:top-\[222px\] {
-    @media (width >= 48rem) {
-      top: 222px;
-    }
-  }
   .md\:h-\[730px\] {
     @media (width >= 48rem) {
       height: 730px;
@@ -3844,19 +3809,14 @@
       width: 33rem;
     }
   }
-  .md\:w-\[50rem\] {
-    @media (width >= 48rem) {
-      width: 50rem;
-    }
-  }
   .md\:grid-cols-1 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
-  .md\:px-8 {
+  .md\:px-12 {
     @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 8);
+      padding-inline: calc(var(--spacing) * 12);
     }
   }
   .md\:px-16 {
@@ -3894,9 +3854,9 @@
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
-  .lg\:px-16 {
+  .lg\:px-8 {
     @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 16);
+      padding-inline: calc(var(--spacing) * 8);
     }
   }
   .lg\:px-20 {
@@ -3927,6 +3887,21 @@
   .xl\:grid-cols-2 {
     @media (width >= 80rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .xl\:px-1 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 1);
+    }
+  }
+  .xl\:px-2 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 2);
+    }
+  }
+  .xl\:px-8 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 8);
     }
   }
   .xl\:px-10 {
