--- a/src/css/output.css
+++ b/src/css/output.css
@@ -621,9 +621,6 @@
   .end-2 {
     inset-inline-end: calc(var(--spacing) * 2);
   }
-  .-top-6 {
-    top: calc(var(--spacing) * -6);
-  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -639,23 +636,11 @@
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
-  .top-\[30vh\] {
-    top: 30vh;
-  }
-  .top-\[35vh\] {
-    top: 35vh;
-  }
   .top-\[37vh\] {
     top: 37vh;
   }
-  .top-\[40vh\] {
-    top: 40vh;
-  }
   .top-\[50vh\] {
     top: 50vh;
-  }
-  .top-\[60vh\] {
-    top: 60vh;
   }
   .top-\[100px\] {
     top: 100px;
@@ -1011,12 +996,6 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
-  }
-  .h-3\/4 {
-    height: calc(3/4 * 100%);
-  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -1047,15 +1026,6 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
-  .h-\[30rem\] {
-    height: 30rem;
-  }
-  .h-\[35rem\] {
-    height: 35rem;
-  }
-  .h-\[90vh\] {
-    height: 90vh;
-  }
   .h-\[103vh\] {
     height: 103vh;
   }
@@ -1065,11 +1035,23 @@
   .h-\[20rem\] {
     height: 20rem;
   }
+  .h-\[30rem\] {
+    height: 30rem;
+  }
   .h-\[34rem\] {
     height: 34rem;
   }
+  .h-\[35rem\] {
+    height: 35rem;
+  }
   .h-\[40rem\] {
     height: 40rem;
+  }
+  .h-\[90vh\] {
+    height: 90vh;
+  }
+  .h-\[99\%\] {
+    height: 99%;
   }
   .h-\[680px\] {
     height: 680px;
@@ -1095,20 +1077,8 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
-  .w-2\/5 {
-    width: calc(2/5 * 100%);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
   }
   .w-3\/4 {
     width: calc(3/4 * 100%);
@@ -1125,9 +1095,6 @@
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
-  .w-11 {
-    width: calc(var(--spacing) * 11);
-  }
   .w-11\/12 {
     width: calc(11/12 * 100%);
   }
@@ -1136,9 +1103,6 @@
   }
   .w-72 {
     width: calc(var(--spacing) * 72);
-  }
-  .w-\[60vh\] {
-    width: 60vh;
   }
   .w-\[64rem\] {
     width: 64rem;
@@ -1253,10 +1217,6 @@
   .translate-full {
     --tw-translate-x: 100%;
     --tw-translate-y: 100%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
@@ -1901,9 +1861,6 @@
     --tw-border-style: solid;
     border-style: solid;
   }
-  .border-slate-300 {
-    border-color: var(--color-slate-300);
-  }
   .border-slate-300\/20 {
     border-color: color-mix(in oklab, var(--color-slate-300) 20%, transparent);
   }
@@ -1993,9 +1950,6 @@
   }
   .bg-slate-100 {
     background-color: var(--color-slate-100);
-  }
-  .bg-slate-200 {
-    background-color: var(--color-slate-200);
   }
   .bg-slate-200\/45 {
     background-color: color-mix(in oklab, var(--color-slate-200) 45%, transparent);
@@ -2518,17 +2472,11 @@
   .text-\[\#ffbf00\] {
     color: #ffbf00;
   }
-  .text-blue-100 {
-    color: var(--color-blue-100);
-  }
   .text-blue-100\/70 {
     color: color-mix(in oklab, var(--color-blue-100) 70%, transparent);
   }
   .text-blue-100\/80 {
     color: color-mix(in oklab, var(--color-blue-100) 80%, transparent);
-  }
-  .text-cyan-50 {
-    color: var(--color-cyan-50);
   }
   .text-cyan-50\/70 {
     color: color-mix(in oklab, var(--color-cyan-50) 70%, transparent);
@@ -2553,9 +2501,6 @@
   }
   .text-orange-100\/80 {
     color: color-mix(in oklab, var(--color-orange-100) 80%, transparent);
-  }
-  .text-red-100 {
-    color: var(--color-red-100);
   }
   .text-red-100\/90 {
     color: color-mix(in oklab, var(--color-red-100) 90%, transparent);
@@ -2584,20 +2529,8 @@
   .text-white {
     color: var(--color-white);
   }
-  .text-yellow-900 {
-    color: var(--color-yellow-900);
-  }
   .text-yellow-900\/80 {
     color: color-mix(in oklab, var(--color-yellow-900) 80%, transparent);
-  }
-  .text-yellow-950 {
-    color: var(--color-yellow-950);
-  }
-  .text-yellow-950\/70 {
-    color: color-mix(in oklab, var(--color-yellow-950) 70%, transparent);
-  }
-  .text-yellow-950\/80 {
-    color: color-mix(in oklab, var(--color-yellow-950) 80%, transparent);
   }
   .text-zinc-100 {
     color: var(--color-zinc-100);
@@ -2879,8 +2812,8 @@
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
-  .backdrop-blur-sm {
-    --tw-backdrop-blur: blur(var(--blur-sm));
+  .backdrop-blur-xs {
+    --tw-backdrop-blur: blur(var(--blur-xs));
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -3140,16 +3073,6 @@
       }
     }
   }
-  .hover\:scale-105 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 105%;
-        --tw-scale-y: 105%;
-        --tw-scale-z: 105%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
   .hover\:scale-110 {
     &:hover {
       @media (hover: hover) {
@@ -3184,52 +3107,10 @@
       }
     }
   }
-  .hover\:bg-\[\#FFFFFF\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #FFFFFF;
-      }
-    }
-  }
   .hover\:bg-\[\#ff6f00\] {
     &:hover {
       @media (hover: hover) {
         background-color: #ff6f00;
-      }
-    }
-  }
-  .hover\:bg-\[\#ffef84\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #ffef84;
-      }
-    }
-  }
-  .hover\:bg-amber-400 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-amber-400);
-      }
-    }
-  }
-  .hover\:bg-amber-400\/80 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: color-mix(in oklab, var(--color-amber-400) 80%, transparent);
-      }
-    }
-  }
-  .hover\:bg-amber-500 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-amber-500);
-      }
-    }
-  }
-  .hover\:bg-black\/67 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: color-mix(in oklab, var(--color-black) 67%, transparent);
       }
     }
   }
@@ -3305,11 +3186,6 @@
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
-  .max-xl\:grid-cols-2 {
-    @media (width < 80rem) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
   .max-xl\:grid-cols-3 {
     @media (width < 80rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -3328,11 +3204,6 @@
   .max-xl\:pt-72 {
     @media (width < 80rem) {
       padding-top: calc(var(--spacing) * 72);
-    }
-  }
-  .max-xl\:text-\[14px\] {
-    @media (width < 80rem) {
-      font-size: 14px;
     }
   }
   .max-lg\:absolute {
@@ -3398,11 +3269,6 @@
   .max-lg\:h-auto {
     @media (width < 64rem) {
       height: auto;
-    }
-  }
-  .max-lg\:w-\[48rem\] {
-    @media (width < 64rem) {
-      width: 48rem;
     }
   }
   .max-lg\:w-full {
@@ -3506,11 +3372,6 @@
       height: auto;
     }
   }
-  .max-md\:w-\[45rem\] {
-    @media (width < 48rem) {
-      width: 45rem;
-    }
-  }
   .max-md\:grid-cols-1 {
     @media (width < 48rem) {
       grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -3526,26 +3387,6 @@
       padding-inline: calc(var(--spacing) * 10);
     }
   }
-  .max-md\:px-12 {
-    @media (width < 48rem) {
-      padding-inline: calc(var(--spacing) * 12);
-    }
-  }
-  .max-sm\:absolute {
-    @media (width < 40rem) {
-      position: absolute;
-    }
-  }
-  .max-sm\:top-1 {
-    @media (width < 40rem) {
-      top: calc(var(--spacing) * 1);
-    }
-  }
-  .max-sm\:top-2 {
-    @media (width < 40rem) {
-      top: calc(var(--spacing) * 2);
-    }
-  }
   .max-sm\:top-40 {
     @media (width < 40rem) {
       top: calc(var(--spacing) * 40);
@@ -3556,24 +3397,9 @@
       top: calc(var(--spacing) * 52);
     }
   }
-  .max-sm\:top-56 {
-    @media (width < 40rem) {
-      top: calc(var(--spacing) * 56);
-    }
-  }
-  .max-sm\:top-\[430px\] {
-    @media (width < 40rem) {
-      top: 430px;
-    }
-  }
   .max-sm\:right-16 {
     @media (width < 40rem) {
       right: calc(var(--spacing) * 16);
-    }
-  }
-  .max-sm\:right-24 {
-    @media (width < 40rem) {
-      right: calc(var(--spacing) * 24);
     }
   }
   .max-sm\:-bottom-2 {
@@ -3589,11 +3415,6 @@
   .max-sm\:bottom-4 {
     @media (width < 40rem) {
       bottom: calc(var(--spacing) * 4);
-    }
-  }
-  .max-sm\:bottom-32 {
-    @media (width < 40rem) {
-      bottom: calc(var(--spacing) * 32);
     }
   }
   .max-sm\:left-0 {
@@ -3619,11 +3440,6 @@
   .max-sm\:left-6 {
     @media (width < 40rem) {
       left: calc(var(--spacing) * 6);
-    }
-  }
-  .max-sm\:left-24 {
-    @media (width < 40rem) {
-      left: calc(var(--spacing) * 24);
     }
   }
   .max-sm\:mx-4 {
@@ -3711,54 +3527,14 @@
       height: calc(var(--spacing) * 12);
     }
   }
-  .max-sm\:h-14 {
-    @media (width < 40rem) {
-      height: calc(var(--spacing) * 14);
-    }
-  }
-  .max-sm\:h-\[35rem\] {
-    @media (width < 40rem) {
-      height: 35rem;
-    }
-  }
   .max-sm\:h-\[37rem\] {
     @media (width < 40rem) {
       height: 37rem;
     }
   }
-  .max-sm\:h-\[38rem\] {
-    @media (width < 40rem) {
-      height: 38rem;
-    }
-  }
-  .max-sm\:h-\[50vh\] {
-    @media (width < 40rem) {
-      height: 50vh;
-    }
-  }
-  .max-sm\:h-\[60vh\] {
-    @media (width < 40rem) {
-      height: 60vh;
-    }
-  }
   .max-sm\:h-\[63vh\] {
     @media (width < 40rem) {
       height: 63vh;
-    }
-  }
-  .max-sm\:h-\[65vh\] {
-    @media (width < 40rem) {
-      height: 65vh;
-    }
-  }
-  .max-sm\:h-\[70vh\] {
-    @media (width < 40rem) {
-      height: 70vh;
-    }
-  }
-  .max-sm\:h-\[580px\] {
-    @media (width < 40rem) {
-      height: 580px;
     }
   }
   .max-sm\:h-auto {
@@ -3833,11 +3609,6 @@
       padding-inline: calc(var(--spacing) * 4);
     }
   }
-  .max-sm\:px-8 {
-    @media (width < 40rem) {
-      padding-inline: calc(var(--spacing) * 8);
-    }
-  }
   .max-sm\:pt-20 {
     @media (width < 40rem) {
       padding-top: calc(var(--spacing) * 20);
@@ -3846,11 +3617,6 @@
   .max-sm\:pr-0 {
     @media (width < 40rem) {
       padding-right: calc(var(--spacing) * 0);
-    }
-  }
-  .max-sm\:pl-0 {
-    @media (width < 40rem) {
-      padding-left: calc(var(--spacing) * 0);
     }
   }
   .max-sm\:pl-4 {
@@ -3894,11 +3660,6 @@
       line-height: var(--tw-leading, var(--text-xs--line-height));
     }
   }
-  .max-sm\:text-\[8\.4px\] {
-    @media (width < 40rem) {
-      font-size: 8.4px;
-    }
-  }
   .max-sm\:text-\[8\.5px\] {
     @media (width < 40rem) {
       font-size: 8.5px;
@@ -3914,11 +3675,6 @@
       font-size: 8.8px;
     }
   }
-  .max-sm\:text-\[8px\] {
-    @media (width < 40rem) {
-      font-size: 8px;
-    }
-  }
   .max-sm\:text-\[9\.3px\] {
     @media (width < 40rem) {
       font-size: 9.3px;
@@ -3932,11 +3688,6 @@
   .max-sm\:text-\[9\.5px\] {
     @media (width < 40rem) {
       font-size: 9.5px;
-    }
-  }
-  .max-sm\:text-\[9\.8px\] {
-    @media (width < 40rem) {
-      font-size: 9.8px;
     }
   }
   .max-sm\:text-\[9px\] {
@@ -3974,34 +3725,9 @@
       animation: typewriter 2.1s steps(48) alternate , blink 0.5s steps(48);
     }
   }
-  .sm\:h-\[50vh\] {
-    @media (width >= 40rem) {
-      height: 50vh;
-    }
-  }
-  .sm\:h-\[70vh\] {
-    @media (width >= 40rem) {
-      height: 70vh;
-    }
-  }
   .sm\:h-\[75vh\] {
     @media (width >= 40rem) {
       height: 75vh;
-    }
-  }
-  .sm\:w-\[43rem\] {
-    @media (width >= 40rem) {
-      width: 43rem;
-    }
-  }
-  .sm\:w-screen {
-    @media (width >= 40rem) {
-      width: 100vw;
-    }
-  }
-  .sm\:px-12 {
-    @media (width >= 40rem) {
-      padding-inline: calc(var(--spacing) * 12);
     }
   }
   .sm\:text-6xl {
@@ -4010,19 +3736,9 @@
       line-height: var(--tw-leading, var(--text-6xl--line-height));
     }
   }
-  .md\:top-36 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 36);
-    }
-  }
   .md\:h-\[70vh\] {
     @media (width >= 48rem) {
       height: 70vh;
-    }
-  }
-  .md\:h-\[730px\] {
-    @media (width >= 48rem) {
-      height: 730px;
     }
   }
   .md\:w-3\/4 {
@@ -4050,35 +3766,10 @@
       padding-inline: calc(var(--spacing) * 16);
     }
   }
-  .md\:px-20 {
-    @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 20);
-    }
-  }
   .md\:text-7xl {
     @media (width >= 48rem) {
       font-size: var(--text-7xl);
       line-height: var(--tw-leading, var(--text-7xl--line-height));
-    }
-  }
-  .lg\:top-32 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 32);
-    }
-  }
-  .lg\:top-36 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 36);
-    }
-  }
-  .lg\:top-40 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 40);
-    }
-  }
-  .lg\:top-44 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 44);
     }
   }
   .lg\:top-48 {
@@ -4086,39 +3777,9 @@
       top: calc(var(--spacing) * 48);
     }
   }
-  .lg\:top-56 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 56);
-    }
-  }
-  .lg\:top-60 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 60);
-    }
-  }
-  .lg\:top-64 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 64);
-    }
-  }
-  .lg\:top-68 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 68);
-    }
-  }
   .lg\:top-72 {
     @media (width >= 64rem) {
       top: calc(var(--spacing) * 72);
-    }
-  }
-  .lg\:top-96 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 96);
-    }
-  }
-  .lg\:top-\[50vh\] {
-    @media (width >= 64rem) {
-      top: 50vh;
     }
   }
   .lg\:h-\[30rem\] {
@@ -4151,11 +3812,6 @@
       padding-inline: calc(var(--spacing) * 8);
     }
   }
-  .lg\:px-20 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 20);
-    }
-  }
   .lg\:px-32 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 32);
@@ -4172,24 +3828,9 @@
       top: 37vh;
     }
   }
-  .xl\:top-\[45vh\] {
-    @media (width >= 80rem) {
-      top: 45vh;
-    }
-  }
   .xl\:top-\[49vh\] {
     @media (width >= 80rem) {
       top: 49vh;
-    }
-  }
-  .xl\:top-\[50vh\] {
-    @media (width >= 80rem) {
-      top: 50vh;
-    }
-  }
-  .xl\:top-\[59vh\] {
-    @media (width >= 80rem) {
-      top: 59vh;
     }
   }
   .xl\:mx-32 {
@@ -4215,21 +3856,6 @@
   .xl\:px-1 {
     @media (width >= 80rem) {
       padding-inline: calc(var(--spacing) * 1);
-    }
-  }
-  .xl\:px-2 {
-    @media (width >= 80rem) {
-      padding-inline: calc(var(--spacing) * 2);
-    }
-  }
-  .xl\:px-8 {
-    @media (width >= 80rem) {
-      padding-inline: calc(var(--spacing) * 8);
-    }
-  }
-  .xl\:px-10 {
-    @media (width >= 80rem) {
-      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .xl\:px-24 {
@@ -4537,6 +4163,7 @@
   transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
   transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
   transition-duration: var(--tw-duration, var(--default-transition-duration));
+  transition-delay: 75ms;
   --tw-duration: 100ms;
   transition-duration: 100ms;
   --tw-ease: var(--ease-in-out);
@@ -4561,7 +4188,7 @@
   padding: calc(var(--spacing) * 1.5);
   --tw-font-weight: var(--font-weight-light);
   font-weight: var(--font-weight-light);
-  color: var(--color-slate-600);
+  color: var(--color-slate-500);
   &::placeholder {
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
