--- a/src/css/output.css
+++ b/src/css/output.css
@@ -636,6 +636,9 @@
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
+  .top-16 {
+    top: calc(var(--spacing) * 16);
+  }
   .top-\[37vh\] {
     top: 37vh;
   }
@@ -650,6 +653,9 @@
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .right-1\/3 {
+    right: calc(1/3 * 100%);
   }
   .right-5 {
     right: calc(var(--spacing) * 5);
@@ -681,6 +687,9 @@
   .bottom-8 {
     bottom: calc(var(--spacing) * 8);
   }
+  .bottom-20 {
+    bottom: calc(var(--spacing) * 20);
+  }
   .bottom-full {
     bottom: 100%;
   }
@@ -692,6 +701,9 @@
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
+  }
+  .left-1\/3 {
+    left: calc(1/3 * 100%);
   }
   .left-3 {
     left: calc(var(--spacing) * 3);
@@ -894,8 +906,14 @@
   .mt-36 {
     margin-top: calc(var(--spacing) * 36);
   }
+  .mr-3 {
+    margin-right: calc(var(--spacing) * 3);
+  }
   .mr-5 {
     margin-right: calc(var(--spacing) * 5);
+  }
+  .mb-1 {
+    margin-bottom: calc(var(--spacing) * 1);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
@@ -1002,6 +1020,12 @@
   .h-5 {
     height: calc(var(--spacing) * 5);
   }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
+  }
+  .h-7 {
+    height: calc(var(--spacing) * 7);
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
@@ -1080,11 +1104,17 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
   .w-3\/4 {
     width: calc(3/4 * 100%);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
+  }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
   }
   .w-8 {
     width: calc(var(--spacing) * 8);
@@ -1295,6 +1325,9 @@
   }
   .animate-fade-in-y-down {
     animation: var(--animate-fade-in-y-down);
+  }
+  .animate-keys-loading {
+    animation: var(--animate-keys-loading);
   }
   .animate-none {
     animation: none;
@@ -1876,6 +1909,9 @@
   .bg-\[\#045deb\] {
     background-color: #045deb;
   }
+  .bg-\[\#076fe5\] {
+    background-color: #076fe5;
+  }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
@@ -2231,6 +2267,9 @@
   .pr-20 {
     padding-right: calc(var(--spacing) * 20);
   }
+  .pb-14 {
+    padding-bottom: calc(var(--spacing) * 14);
+  }
   .pb-16 {
     padding-bottom: calc(var(--spacing) * 16);
   }
@@ -2386,6 +2425,10 @@
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
   }
+  .font-normal {
+    --tw-font-weight: var(--font-weight-normal);
+    font-weight: var(--font-weight-normal);
+  }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
@@ -2480,6 +2523,12 @@
   }
   .text-cyan-50\/70 {
     color: color-mix(in oklab, var(--color-cyan-50) 70%, transparent);
+  }
+  .text-green-500 {
+    color: var(--color-green-500);
+  }
+  .text-green-600 {
+    color: var(--color-green-600);
   }
   .text-indigo-100 {
     color: var(--color-indigo-100);
@@ -3125,13 +3174,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: color-mix(in oklab, var(--color-white) 100%, transparent);
-      }
-    }
-  }
-  .hover\:bg-yellow-500 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-yellow-500);
       }
     }
   }
@@ -4283,7 +4325,6 @@
   line-height: var(--tw-leading, var(--text-base--line-height));
   --tw-font-weight: var(--font-weight-medium);
   font-weight: var(--font-weight-medium);
-  color: #2e7d32;
   transition: all 0.5s ease;
 }
 .main_buttons {
