--- a/src/css/output.css
+++ b/src/css/output.css
@@ -648,14 +648,38 @@
   .top-\[100px\] {
     top: 100px;
   }
+  .-right-10 {
+    right: calc(var(--spacing) * -10);
+  }
   .-right-20 {
     right: calc(var(--spacing) * -20);
+  }
+  .-right-30 {
+    right: calc(var(--spacing) * -30);
+  }
+  .-right-36 {
+    right: calc(var(--spacing) * -36);
+  }
+  .-right-40 {
+    right: calc(var(--spacing) * -40);
+  }
+  .-right-44 {
+    right: calc(var(--spacing) * -44);
+  }
+  .-right-52 {
+    right: calc(var(--spacing) * -52);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .right-1 {
+    right: calc(var(--spacing) * 1);
+  }
   .right-1\/3 {
     right: calc(1/3 * 100%);
+  }
+  .right-3 {
+    right: calc(var(--spacing) * 3);
   }
   .right-5 {
     right: calc(var(--spacing) * 5);
@@ -663,8 +687,17 @@
   .right-9 {
     right: calc(var(--spacing) * 9);
   }
+  .right-10 {
+    right: calc(var(--spacing) * 10);
+  }
   .right-14 {
     right: calc(var(--spacing) * 14);
+  }
+  .right-20 {
+    right: calc(var(--spacing) * 20);
+  }
+  .right-40 {
+    right: calc(var(--spacing) * 40);
   }
   .-bottom-4 {
     bottom: calc(var(--spacing) * -4);
@@ -1050,29 +1083,29 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
-  .h-\[103vh\] {
-    height: 103vh;
-  }
-  .h-\[15rem\] {
-    height: 15rem;
-  }
   .h-\[20rem\] {
     height: 20rem;
   }
-  .h-\[30rem\] {
-    height: 30rem;
-  }
   .h-\[34rem\] {
     height: 34rem;
-  }
-  .h-\[35rem\] {
-    height: 35rem;
   }
   .h-\[40rem\] {
     height: 40rem;
   }
   .h-\[90vh\] {
     height: 90vh;
+  }
+  .h-\[103vh\] {
+    height: 103vh;
+  }
+  .h-\[15rem\] {
+    height: 15rem;
+  }
+  .h-\[30rem\] {
+    height: 30rem;
+  }
+  .h-\[35rem\] {
+    height: 35rem;
   }
   .h-\[99\%\] {
     height: 99%;
@@ -1101,6 +1134,9 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -1124,6 +1160,9 @@
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
+  }
+  .w-11 {
+    width: calc(var(--spacing) * 11);
   }
   .w-11\/12 {
     width: calc(11/12 * 100%);
@@ -1247,6 +1286,10 @@
   .translate-full {
     --tw-translate-x: 100%;
     --tw-translate-y: 100%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
@@ -1894,6 +1937,9 @@
     --tw-border-style: solid;
     border-style: solid;
   }
+  .border-slate-300 {
+    border-color: var(--color-slate-300);
+  }
   .border-slate-300\/20 {
     border-color: color-mix(in oklab, var(--color-slate-300) 20%, transparent);
   }
@@ -1986,6 +2032,9 @@
   }
   .bg-slate-100 {
     background-color: var(--color-slate-100);
+  }
+  .bg-slate-200 {
+    background-color: var(--color-slate-200);
   }
   .bg-slate-200\/45 {
     background-color: color-mix(in oklab, var(--color-slate-200) 45%, transparent);
@@ -2515,11 +2564,17 @@
   .text-\[\#ffbf00\] {
     color: #ffbf00;
   }
+  .text-blue-100 {
+    color: var(--color-blue-100);
+  }
   .text-blue-100\/70 {
     color: color-mix(in oklab, var(--color-blue-100) 70%, transparent);
   }
   .text-blue-100\/80 {
     color: color-mix(in oklab, var(--color-blue-100) 80%, transparent);
+  }
+  .text-cyan-50 {
+    color: var(--color-cyan-50);
   }
   .text-cyan-50\/70 {
     color: color-mix(in oklab, var(--color-cyan-50) 70%, transparent);
@@ -2551,6 +2606,9 @@
   .text-orange-100\/80 {
     color: color-mix(in oklab, var(--color-orange-100) 80%, transparent);
   }
+  .text-red-100 {
+    color: var(--color-red-100);
+  }
   .text-red-100\/90 {
     color: color-mix(in oklab, var(--color-red-100) 90%, transparent);
   }
@@ -2577,6 +2635,9 @@
   }
   .text-white {
     color: var(--color-white);
+  }
+  .text-yellow-900 {
+    color: var(--color-yellow-900);
   }
   .text-yellow-900\/80 {
     color: color-mix(in oklab, var(--color-yellow-900) 80%, transparent);
