--- a/src/css/input.css
+++ b/src/css/input.css
@@ -89,6 +89,7 @@
   --animate-fade-in-x: fade-in-x 800ms ease-in-out;
   --animate-fade-in-x-i: fade-in-x-i 800ms ease-in-out;
   --animate-fade-in-scale: fade-in-scale 1s ease-in-out;
+  --animate-fade-in-scale-big: fade-in-scale-big 300ms ease-out;
   --animate-fade-in-y: fade-in-y 600ms ease-in-out;
   --animate-fade-fall: fade-fall 1s ease-out;
   --animate-card-skill-out: card-skill-out 510ms ease-out;
@@ -215,6 +216,17 @@
       0% {
         opacity: 0;
         transform: scale(0.9);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    @keyframes fade-in-scale-big {
+      0% {
+        opacity: 0;
+        transform: scale(0.6);
       }
       100% {
         opacity: 1;
