--- a/src/css/output.css
+++ b/src/css/output.css
@@ -937,9 +937,6 @@
     -webkit-box-orient: horizontal;
     -webkit-line-clamp: unset;
   }
-  .\!hidden {
-    display: none !important;
-  }
   .block {
     display: block;
   }
@@ -1051,8 +1048,14 @@
   .h-\[20rem\] {
     height: 20rem;
   }
-  .h-\[35rem\] {
-    height: 35rem;
+  .h-\[34rem\] {
+    height: 34rem;
+  }
+  .h-\[40rem\] {
+    height: 40rem;
+  }
+  .h-\[90vh\] {
+    height: 90vh;
   }
   .h-\[103vh\] {
     height: 103vh;
@@ -1063,14 +1066,8 @@
   .h-\[30rem\] {
     height: 30rem;
   }
-  .h-\[34rem\] {
-    height: 34rem;
-  }
-  .h-\[40rem\] {
-    height: 40rem;
-  }
-  .h-\[90vh\] {
-    height: 90vh;
+  .h-\[35rem\] {
+    height: 35rem;
   }
   .h-\[99\%\] {
     height: 99%;
@@ -2148,6 +2145,9 @@
   .fill-none {
     fill: none;
   }
+  .fill-white {
+    fill: var(--color-white);
+  }
   .stroke-none {
     stroke: none;
   }
@@ -2519,6 +2519,9 @@
   .text-\[\#ffbf00\] {
     color: #ffbf00;
   }
+  .text-amber-400 {
+    color: var(--color-amber-400);
+  }
   .text-blue-100\/70 {
     color: color-mix(in oklab, var(--color-blue-100) 70%, transparent);
   }
@@ -2832,10 +2835,6 @@
     --tw-grayscale: grayscale(100%);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
-  .\!invert {
-    --tw-invert: invert(100%) !important;
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,) !important;
-  }
   .invert {
     --tw-invert: invert(100%);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -2936,6 +2935,10 @@
   }
   .delay-300 {
     transition-delay: 300ms;
+  }
+  .duration-200 {
+    --tw-duration: 200ms;
+    transition-duration: 200ms;
   }
   .duration-300 {
     --tw-duration: 300ms;
@@ -3101,6 +3104,13 @@
   }
   .transform-view {
     transform-box: view-box;
+  }
+  .group-hover\:fill-amber-400 {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        fill: var(--color-amber-400);
+      }
+    }
   }
   .hover\:-translate-x-1 {
     &:hover {
@@ -4106,13 +4116,14 @@
   }
 }
 .header_text {
-  border-radius: var(--radius-lg);
-  padding-inline: calc(var(--spacing) * 3);
-  padding-block: calc(var(--spacing) * 1);
+  margin-inline: calc(var(--spacing) * 2);
+  padding-inline: calc(var(--spacing) * 1);
   font-family: var(--font-nexa);
   font-size: var(--text-lg);
   line-height: var(--tw-leading, var(--text-lg--line-height));
-  color: var(--color-slate-100);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
   &:hover {
     @media (hover: hover) {
       --tw-translate-y: calc(1px * -1);
@@ -4121,18 +4132,13 @@
   }
   &:hover {
     @media (hover: hover) {
-      background-color: var(--color-indigo-700);
+      border-bottom-style: var(--tw-border-style);
+      border-bottom-width: 2px;
     }
   }
   &:hover {
     @media (hover: hover) {
-      --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  &:hover {
-    @media (hover: hover) {
-      --tw-shadow-color: color-mix(in oklab, var(--color-black) 10%, transparent);
+      border-color: var(--color-amber-400);
     }
   }
 }
