--- a/src/css/output.css
+++ b/src/css/output.css
@@ -2519,6 +2519,9 @@
   .text-\[\#ffbf00\] {
     color: #ffbf00;
   }
+  .text-amber-300 {
+    color: var(--color-amber-300);
+  }
   .text-amber-400 {
     color: var(--color-amber-400);
   }
