--- a/src/css/input.css
+++ b/src/css/input.css
@@ -343,7 +343,7 @@
 }
 
 .certificado{
-  @apply rounded-md shadow-md transition delay-75 hover:scale-105 hover:shadow-xl;
+  @apply rounded-md shadow-md transition duration-300 hover:scale-105 hover:shadow-xl;
 }
 
 .transition_button{
