--- a/src/css/output.css
+++ b/src/css/output.css
@@ -658,9 +658,6 @@
   .right-1\/3 {
     right: calc(1/3 * 100%);
   }
-  .right-2 {
-    right: calc(var(--spacing) * 2);
-  }
   .right-3 {
     right: calc(var(--spacing) * 3);
   }
@@ -669,9 +666,6 @@
   }
   .right-5 {
     right: calc(var(--spacing) * 5);
-  }
-  .right-9 {
-    right: calc(var(--spacing) * 9);
   }
   .right-14 {
     right: calc(var(--spacing) * 14);
@@ -697,8 +691,23 @@
   .bottom-8 {
     bottom: calc(var(--spacing) * 8);
   }
+  .bottom-10 {
+    bottom: calc(var(--spacing) * 10);
+  }
   .bottom-20 {
     bottom: calc(var(--spacing) * 20);
+  }
+  .bottom-30 {
+    bottom: calc(var(--spacing) * 30);
+  }
+  .bottom-32 {
+    bottom: calc(var(--spacing) * 32);
+  }
+  .bottom-40 {
+    bottom: calc(var(--spacing) * 40);
+  }
+  .bottom-52 {
+    bottom: calc(var(--spacing) * 52);
   }
   .bottom-full {
     bottom: 100%;
@@ -1147,6 +1156,9 @@
   .w-72 {
     width: calc(var(--spacing) * 72);
   }
+  .w-\[10px\] {
+    width: 10px;
+  }
   .w-\[64rem\] {
     width: 64rem;
   }
@@ -1274,20 +1286,8 @@
     --tw-translate-y: calc(var(--spacing) * 1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-y-3 {
-    --tw-translate-y: calc(var(--spacing) * 3);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-y-\[1px\] {
-    --tw-translate-y: 1px;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-y-\[2px\] {
     --tw-translate-y: 2px;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-y-\[3px\] {
-    --tw-translate-y: 3px;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-z-px {
@@ -1664,17 +1664,11 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
-  }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
   .gap-1\.5 {
     gap: calc(var(--spacing) * 1.5);
-  }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
   }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
@@ -1961,9 +1955,6 @@
   .bg-\[\#045deb\] {
     background-color: #045deb;
   }
-  .bg-\[\#076fe5\] {
-    background-color: #076fe5;
-  }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
@@ -1981,6 +1972,9 @@
   }
   .bg-\[\#ff0000\] {
     background-color: #ff0000;
+  }
+  .bg-\[\#ff6f00\] {
+    background-color: #ff6f00;
   }
   .bg-\[\#ffbf00\] {
     background-color: #ffbf00;
@@ -2036,14 +2030,11 @@
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
   }
+  .bg-slate-50 {
+    background-color: var(--color-slate-50);
+  }
   .bg-slate-100 {
     background-color: var(--color-slate-100);
-  }
-  .bg-slate-200 {
-    background-color: var(--color-slate-200);
-  }
-  .bg-slate-200\/45 {
-    background-color: color-mix(in oklab, var(--color-slate-200) 45%, transparent);
   }
   .bg-slate-800 {
     background-color: var(--color-slate-800);
@@ -2345,9 +2336,6 @@
   }
   .pl-1 {
     padding-left: calc(var(--spacing) * 1);
-  }
-  .pl-2 {
-    padding-left: calc(var(--spacing) * 2);
   }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
@@ -4301,11 +4289,12 @@
 .input_email {
   margin-bottom: calc(var(--spacing) * 3);
   width: calc(3/4 * 100%);
-  border-radius: var(--radius-lg);
-  border-style: var(--tw-border-style);
-  border-width: 1px;
-  border-color: var(--color-slate-300);
-  background-color: var(--color-white);
+  border-bottom-style: var(--tw-border-style);
+  border-bottom-width: 2px;
+  --tw-border-style: solid;
+  border-style: solid;
+  border-color: color-mix(in oklab, var(--color-indigo-800) 40%, transparent);
+  background-color: transparent;
   padding: calc(var(--spacing) * 1.5);
   --tw-font-weight: var(--font-weight-light);
   font-weight: var(--font-weight-light);
@@ -4318,11 +4307,7 @@
     color: var(--color-zinc-400);
   }
   &:focus {
-    --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  &:focus {
-    --tw-ring-color: color-mix(in oklab, var(--color-blue-500) 70%, transparent);
+    border-color: color-mix(in oklab, #ff6f00 70%, transparent);
   }
   &:focus {
     outline-style: var(--tw-outline-style);
@@ -4335,10 +4320,10 @@
 }
 .button_email {
   margin-bottom: calc(var(--spacing) * 3);
-  width: calc(1/2 * 100%);
+  width: 20vh;
   border-radius: var(--radius-md);
   background-color: var(--color-indigo-500);
-  padding: calc(var(--spacing) * 1.5);
+  padding: calc(var(--spacing) * 1);
   --tw-font-weight: var(--font-weight-bold);
   font-weight: var(--font-weight-bold);
   color: var(--color-slate-100);
@@ -4551,12 +4536,12 @@
 @keyframes keys-loading {
   0%, 80%, 100% {
     opacity: 0.75;
-    box-shadow: 0 0 #076fe5;
-    height: 10px;
+    box-shadow: 0 0 #ff6f00;
+    height: 6px;
   }
   40% {
     opacity: 1;
-    box-shadow: 0 -0.5rem #076fe5;
+    box-shadow: 0 -0.5rem #ff6f00;
     height: 22px;
   }
 }
