Improving header font and some changes in mobile menu

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -64,11 +64,27 @@
   src: url(/src/fonts/Minecrafter.ttf) format('truetype');
 }
 
+@font-face{
+  font-family: MadeTommyMedium;
+  font-style: normal;
+  font-weight: 400;
+  src: url(/src/fonts/MADETOMMY-Medium.otf) format('opentype');
+}
+
+@font-face{
+  font-family: MadeTommyRegular;
+  font-style: normal;
+  font-weight: 400;
+  src: url(/src/fonts/MADETOMMY-Regular.otf) format('opentype');
+}
+
 @theme {
 
   --font-minecrafter: "Minecrafter", "sans serif";
   --font-cherolina: "Cherolina", "sans serif";
   --font-coolvetica: "Coolvetica", "sans serif";
+  --font-madetommy-Medium: "MadeTommyMedium", "sans serif";
+  --font-madetommy-regular: "MadeTommyRegular", "sans serif";
   --font-nexa: "Nexa", "sans serif";
   --font-superme: "Superme", "sans serif";
   --font-creato: "CreatoDisplay", "sans serif";
@@ -331,11 +347,11 @@
 }
 
 .header_text{
-  @apply text-lg font-nexa px-1 mx-2 transition hover:-translate-y-[1px] hover:border-b-2 hover:border-amber-400;
+  @apply text-lg font-madetommy-Medium px-1 mx-2 transition hover:-translate-y-[1px] hover:border-b-2 hover:border-amber-400;
 }
 
 .header_text2{
-  @apply text-slate-100 font-coolvetica px-3 py-1 hover:bg-indigo-800 rounded-lg hover:shadow-lg hover:shadow-black/10;
+  @apply text-slate-100 font-madetommy-Medium px-3 py-1 hover:bg-indigo-800 rounded-lg hover:shadow-lg hover:shadow-black/10;
 }
 
 .header_buttons{
